remove redundant bindings, make journal commands extends AbstractNodeCommand